[tool.poetry]
name = "at-python"
version = "0.1.0"
description = ""
authors = ["umangshah <shahumang19@gmail.com>"]
readme = "README.md"
packages = [{include = "at_python"}]

[tool.poetry.dependencies]
python = "^3.8"
cffi = "1.15.1"
cryptography = "40.0.2"
pycparser = "2.21"
python-dateutil = "2.8.2"
six = "1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
