[tool.poetry]
name = "at_python"
version = "0.0.1"
description = "Python SDK for atPlatform"
authors = ["Umang Shah <shahumang19@gmail.com>"]
readme = "README.md"
packages = [{include = "at_client"}]
homepage = "https://github.com/atsign-foundation/at_python"

[tool.poetry.dependencies]
python = "^3.8"
cffi = "1.15.1"
cryptography = "41.0.3"
pycparser = "2.21"
python-dateutil = "2.8.2"
six = "1.16.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"