[metadata]
name = at_python
version = 0.0.1
author = At Foundation
author_email = shahumang19@gmail.com
description = AtClient SDK for atPlatform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atsign-foundation/at_python
classifiers =
Programming Language :: Python :: 3
Operating System : : OS Independent
[options]
packages = find:
python_requires = >=3.8
include_package_data = True